# keyring-search

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml
examples/: cli.rs
examples/ios/rs/: Cargo.toml
examples/ios/rs/src/: lib.rs  search.h
examples/ios/swift/CredentialSniffer/: search-bridge.h
examples/ios/swift/CredentialSniffer/CredentialSniffer/: ContentView.swift  CredentialSniffer.swift  CredentialSnifferApp.swift
examples/ios/swift/CredentialSniffer/CredentialSniffer.xcodeproj/: project.pbxproj
examples/ios/swift/CredentialSniffer/CredentialSniffer.xcodeproj/project.xcworkspace/xcuserdata/wiimmers.xcuserdatad/: UserInterfaceState.xcuserstate
examples/ios/swift/CredentialSniffer/CredentialSniffer.xcodeproj/xcuserdata/wiimmers.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
examples/ios/swift/CredentialSniffer/CredentialSniffer.xcodeproj/xcuserdata/wiimmers.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/ios/swift/CredentialSniffer/CredentialSnifferTests/: CredentialSnifferTests.swift
examples/ios/swift/CredentialSniffer/CredentialSnifferUITests/: CredentialSnifferUITests.swift  CredentialSnifferUITestsLaunchTests.swift
src/: error.rs  ios.rs  keyutils.rs  lib.rs  macos.rs  main.rs  mock.rs  search.rs  secret_service.rs  windows.rs
