[package]
name = "keyring_search_ios"
authors = ["Nick Wimmers <wimmers.nicholas@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "keyring_search_ios"
crate-type = ["staticlib", "cdylib"]

[dependencies]
keyring-search = { path = "../../../" }
core-foundation = "0.9.2"

[dev-dependencies]
rand = "0.8.4"
serial_test = "0.5.1"
